syntax = "proto3";

option csharp_namespace = "GrpcStockClient";

package product;

service StockManager {
  rpc GetCurrentStockLevels (GetCurrentStockRequest) returns (StockLevelReply);
}

message GetCurrentStockRequest {
  string productId = 1;
}

message StockLevelReply {
  double freeStock = 1;
  double reservedStock = 2;
}
